# boid_brush

./: .gitignore  MIGRATION_CONSULTATION.md  New features to add to this painting app.md  README.md  ai-dashboard.html  ai-server.js  app.html  app.js  blob-stroke.js  boid_brush.code-workspace  boid_brush.html  brushes.js  compositor.js  copilot-instructions.md  demo.html  fluid setup planning.md  fluid-setup.instructions.md  fluid_advect.js  index.html  index_old.html  landingpage.txt  package-lock.json  plan.md  planned_changes.txt  planning.md  psd-io.js  selection.js  ui.js  ui_mockup.html  wasm-bridge.js
.github/: copilot-instructions.md
.github/agents/: my-agent.agent.md
docs/: fluid-brush.md  fluid-playground-session-summary-2026-04-25.md
native/: .gitignore  CMakeLists.txt  README.md
native/shaders/: fullscreen.frag  fullscreen.vert
native/src/: boid.h  canvas.cpp  canvas.h  main.cpp  vk_renderer.cpp  vk_renderer.h
notebooks/: lbm_fluid_iteration.ipynb  lbm_fluid_model.py
playground/: fluid_playground.html  fluid_playground.js
server/: requirements.txt  server.py  setup.bat  setup.sh
wasm-sim/: Cargo.toml
wasm-sim/pkg/: boid_sim.d.ts  boid_sim.js  boid_sim_bg.wasm  boid_sim_bg.wasm.d.ts  package.json
wasm-sim/src/: boid.rs  fluid.rs  forces.rs  lbm.rs  lib.rs  noise.rs  params.rs  sensing.rs  sim.rs  spatial.rs  spawn.rs
